# Ymgyrch

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  Windows CLI.vcxproj  Ymgyrch.sln  Ymgyrch.vcxproj
lib/: CMakeLists.txt  fmtlib.vcxproj
qt_gui/: CMakeLists.txt  ROMInfo.cpp  ROMInfo.h  debugger.cpp  debugger.h  debugger.ui  emucore.cpp  emucore.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_gui.pro  qt_gui.vcxproj  sdl_input.cpp  sdl_input.h  sdl_subsys.cpp  sdl_subsys.h  system_chooser.cpp
qt_gui/GeneratedFiles/: ui_debugger.h  ui_mainwindow.h
qt_gui/UI/: Debugger.cpp  Debugger.h  Debugger.ui  MainWindow.cpp  MainWindow.ui  Renderer.cpp  Renderer.h  Renderer.ui  mainwindow.h
src/: CMakeLists.txt  config.cpp  cpu.cpp  emucore.cpp  input.cpp  logger.cpp  system_chooser.cpp
src/core/: config.cpp  cpu.cpp  system.cpp
src/cpu/: 6502.cpp  CHIP8Cpu.cpp  CMakeLists.txt  LR35902.cpp  LR35902_Instructions.cpp
src/includes/: IInputSystem.h  IVideoSystem.h  cpu.h  device.h  emucore.h  gpu.h  host.h  input.h  log.h  logging.hpp  memcontroller.h  memory.h  system.h  ymgyrch.h
src/includes/cpu/: 6502.h  CHIP8Cpu.h  LR35902.h
src/includes/mem/: mirror_ram.h  null_memory.h  ram.h  rom.h
src/includes/system/: CHIP8.h  Gameboy.h  NES.h
src/includes/systems/chip8/: Chip8GPU.h
src/includes/tui/: tui.hpp
src/includes/ymgyrch/: core.hpp  cpu.hpp  state.hpp  system.hpp  time.hpp
src/includes/ymgyrch/cpu/: 2A03.hpp
src/includes/ymgyrch/memory/: controller.hpp  device.hpp  ram.hpp
src/includes/ymgyrch/systems/: nes.cpp  nes.hpp
src/includes/ymgyrch/systems/nes/: nes_mapper.hpp  nes_nomapper.hpp
src/libYmgyrch/: CMakeLists.txt  core.cxx  logging.cxx  state.cxx  time.cxx
src/libYmgyrch/cpu/: CMakeLists.txt
src/libYmgyrch/cpu/2A03/: 2A03.cxx  2A03Instructions.cxx
src/libYmgyrch/memory/: CMakeLists.txt  controller.cxx  ram.cxx
src/libYmgyrch/system/: CMakeLists.txt  nes.cxx
src/libYmgyrch/system/NES/: nes.cxx  nes_mappers.cxx
src/mem/: controller.cpp  flat_ram.cpp  mirror_ram.cpp  null_memory.cpp  rom.cpp
src/memory/: CMakeLists.txt  controller.cpp  flat_ram.cpp  mirror_ram.cpp  null_memory.cpp  rom.cpp
src/system/: CHIP8.cpp  Gameboy.cpp  NES.cpp
src/systems/chip8/: CHIP8.cpp  CHIP8Cpu.cpp  CMakeLists.txt  Chip8GPU.cpp
src/systems/gameboy/: CMakeLists.txt  Gameboy.cpp  LR35902.cpp  LR35902_Instructions.cpp
src/tui/: CMakeLists.txt  main.cxx  tui.cxx
tui/: main.cpp  system_chooser.cpp
windows_cli/: main.cpp  tui.cpp  tui.h
